Fix fade in margin overflow for small screens. Compress contact page image.

--- a/dev/sass/landing.sass
+++ b/dev/sass/landing.sass
@@ -11,7 +11,8 @@ $page-font: normal normal 400 1em 'White Elephant','Economica',sans-serif
 
 html
 	height: 100%
-	// overflow-x: hidden
+	padding: 0
+	margin: 0
 
 body
 	background-size: cover
@@ -19,7 +20,7 @@ body
 	background-image: $background-image
 	font-size: 10px
 
-*
+// *
 	// outline: red 1px solid
 
 .more-info
@@ -60,7 +61,6 @@ header
 		line-height: 1em
 	h2
 		font-size: 4.5em
-		// letter-spacing: -2px
 
 	.title
 		margin-bottom: 0em
@@ -72,41 +72,12 @@ header
 		background-color: #333
 
 	.featuring, .directed
-		// font-weight: bold
 		display: inline-block
 	.featuring+.directed
 		margin-left: 1.5em
 
-
-
-@media(max-height: 890px), (max-width: 1200px)
-	body
-		font-size: 8px
-
-@media(max-width: 1000px)
-	body
-		font-size: 7px
-
-@media(max-height: 775px), (max-width: 800px)
-	body
-		font-size: 6px
-
 @media(max-width: 750px)
 	header
 		position: inherit
-		margin: 12em auto 0 auto
-
-@media(max-width: 550px)
-	body
-		font-size: 6px
-
-// for wide and thin monitors
-@media(max-height: 730px) and (min-width: 1500px),(min-width: 1600px)
-	body
-		font-size: 4px
-
-
-@media(max-height: 665px), (max-width: 475px)
-	body
-		font-size: 4px
-
+		margin: 0 auto
+		padding-top: 12em
